# DocProcessGPT

./: .gitignore  .replit  Pasted-2024-10-06-00-20-49-598-INFO-Rendering-index-page-in-home-runner-DocProcessGPT-app-py-40-2024-10-1728174131985.txt  Pasted-2024-10-06-00-23-43-959-INFO-Rendering-index-page-in-home-runner-DocProcessGPT-app-py-47-2024-10-1728174295594.txt  README.md  app.py  config.py  create_test_pdf.py  logging_config.py  main.py  pdf_processor.py  pyproject.toml  replit.nix  requirements.txt  text_preprocessor.py  time_utils.py
.pycharm_helpers/: build.txt
.pycharm_helpers/jupyter_debug/: pydev_jupyter_plugin.py  pydev_jupyter_utils.py
.pycharm_helpers/pydev/pydevd_attach_to_process/: attach.dylib
.pycharm_helpers/pydevd_asyncio/: pydevd_asyncio_constants.py  pydevd_asyncio_utils.py  pydevd_nest_asyncio.py
static/: styles.css
templates/: processing.html  upload.html  view_logs.html
